# RayTracer

./: CIE_Values.h  CMakeLists.txt  README.md  RGBSpectrum.h  SampledSpectrum.h  SuperSpectrum.h  aabb.h  background.h  box.h  bvh_node.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  main.cpp  material.h  parseOBJ.h  plane.h  ray.h  ray_tracer.h  ray_tracer_stb_image.h  rectangle.h  setupScene.h  sphere.h  texture.h  triangle.h  vec3.cpp  vec3.h
Animator/: frameMaker.h  movingCamera.h
